# cansat-visual

./: .gitignore  .gitmodules  CMakeLists.txt
resources/: cansat.glb
src/: main.cpp  render.hpp
